--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
   "volta": {
     "node": "18.12.1"
   }
