🔧 add yarn version

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "registry": "https://npm.pkg.github.com"
   },
   "volta": {
-    "node": "18.12.1"
+    "node": "18.12.1",
+    "yarn": "1.22.19"
   }
 }
