--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: volta-cli/action@v3
+        with:
+          registry-url: https://npm.pkg.github.com
+          scope: '@lollipop-onl'
       - name: install dependencies
         run: yarn install --frozen-lockfile
       - name: build
