--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release to GitHub Packages
+name: Publish Package to npmjs
 on:
   workflow_dispatch:
   release:
@@ -11,8 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: volta-cli/action@v3
         with:
-          registry-url: https://npm.pkg.github.com
-          scope: '@lollipop-onl'
+          registry-url: https://registry.npmjs.org
       - name: install dependencies
         run: yarn install --frozen-lockfile
       - name: build
@@ -20,4 +19,4 @@ jobs:
       - name: release
         run: yarn publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
