--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: can-npm-publish
+        run: npx can-npm-publish --verbose
       - uses: volta-cli/action@v3
         with:
           registry-url: https://registry.npmjs.org
@@ -17,6 +19,6 @@ jobs:
       - name: build
         run: yarn build
       - name: release
-        run: yarn publish
+        run: yarn publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
