--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lollipop-onl/docsify-plugin-ga",
+  "name": "docsify-plugin-ga",
   "version": "1.0.0",
   "main": "./lib/main.js",
   "repository": {
@@ -19,10 +19,6 @@
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://npm.pkg.github.com"
   },
   "volta": {
     "node": "18.12.1",
