--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,13 +12,11 @@ jobs:
       - name: can-npm-publish
         run: npx can-npm-publish --verbose
       - uses: volta-cli/action@v3
-        with:
-          registry-url: https://registry.npmjs.org
       - name: install dependencies
         run: yarn install --frozen-lockfile
       - name: build
         run: yarn build
       - name: release
-        run: yarn publish --access=public
+        run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
